--- a/src/course/config.json
+++ b/src/course/config.json
@@ -1,5 +1,5 @@
 {
-    "_defaultLanguage": "en",
+    "_defaultLanguage": "pl",
     "_defaultDirection": "ltr",
     "_questionWeight": 1,
     "_logging": {
